@@ -3,5 +3,5 @@
 
 struct A
 {
-  template <class> int f (B);	// { dg-error "was not declared in this scope|cannot be a member template" }
+  template <class> int f (B);	// { dg-error "was not declared in this scope|cannot be a member template|has not been declared" }
 };
