@@ -1,3 +1,10 @@
+2011-07-09  Jason Merrill  <jason@redhat.com>
+
+	* g++.dg/cpp0x/regress/regress6.C: New.
+	* g++.dg/parse/crash45.C: Adjust message.
+	* g++.dg/template/crash38.C: Adjust message.
+	* g++.dg/template/crash64.C: Adjust message.
+
 2011-07-09  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* c-c++-common/dfp/func-vararg-alternate-d128-2.c: Support x32.
